# frieren-desktop

./: .gitignore  CONTRIBUTING.md  README.md  config.json  index.html  package-lock.json  package.json  ui.html  vite.config.js
.github/workflows/: build.yml
electron/: animation-archive.js  main.js  preload.cjs
src/: agent-registration.js  agent-tools.js  auth.js  avatar.js  client-id.js  config.js  electron-ipc.js  index.html  livekit-client.js  main - Copy.js  main.js  renderer.js  style.css  styles.css  ui.js  visemes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
