[package]
name = "frieren-desktop"
version = "0.1.0"
description = "Frieren AI Companion Desktop Client"
authors = ["Frierenclaw"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri               = { version = "2.0.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-store  = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs     = "2.0.0"
tauri-plugin-process = "2.0.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
raw-window-handle = "0.6"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
